# richat

./: .gitignore  CHANGELOG.md  Cargo.toml
plugin-agave/: Cargo.toml
plugin-agave/src/: config.rs  plugin.rs
