[workspace]
resolver = "2"
members = [
    "cli",
    "client",
    "filter",
    "metrics",
    "plugin-agave",
    "proto",
    "richat",
    "shared",
]

[workspace.package]
authors = ["Lamports Dev", "Triton One"]
edition = "2024"
homepage = "https://lamports.dev"
repository = "https://github.com/lamports-dev/richat"
license = "Apache-2.0"
keywords = ["solana"]
publish = false

[workspace.dependencies]
affinity-linux = "1.0.0"
agave-geyser-plugin-interface = "~3.0.4"
agave-reserved-account-keys = "~3.0.4"
anyhow = "1.0.62"
arrayvec = "0.7.6"
base64 = "0.22.1"
bincode = "1.3.3"
bs58 = "0.5.1"
bytes = "1.9.0"
cargo-lock = "10.0.1"
clap = "4.5.23"
const-hex = "1.14.0"
criterion = "0.7.0"
crossbeam-queue = "0.3.12"
fastwebsockets = "0.10.0"
five8 = "1.0.0"
foldhash = "0.2.0"
futures = "0.3.31"
git-version = "0.3.9"
hostname = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
human-size = "0.4.3"
humantime-serde = "1.1.1"
hyper = "1.4.1"
hyper-util = "0.1.7"
indicatif = "0.18.0"
json5 = "0.4.1"
jsonrpc-core = "18.0.0"
jsonrpsee-types = "0.26.0"
log = "0.4.22"
maplit = "1.0.2"
metrics = "0.24.1"
metrics-exporter-prometheus = { version = "0.17.2", default-features = false }
pin-project-lite = "0.2.15"
num_cpus = "1.16.0"
prost = "0.14.1"
prost-types = "0.14.1"
prost_011 = { package = "prost", version = "0.11.9" }
protoc-bin-vendored = "3.2.0"
quanta = "0.12.5"
quinn = "0.11.6"
rayon = "1.10.0"
rcgen = "0.14.0"
regex = "1.11.1"
richat-client = { path = "client", version = "7.0.0" }
richat-filter = { path = "filter", version = "7.0.0" }
richat-metrics = { path = "metrics", version = "1.0.1" }
richat-plugin-agave = { path = "plugin-agave", version = "7.1.0" }
richat-proto = { path = "proto", version = "7.0.0" }
richat-shared = { path = "shared", version = "7.2.0", default-features = false }
rocksdb = "0.24.0"
rustls = { version = "0.23.20", default-features = false }
rustls-native-certs = "0.8.1"
rustls-pemfile = "2.2.0"
serde = "1.0.145"
serde_json = "1.0.86"
serde_yaml = "0.9.33"
signal-hook = "0.3.17"
smallvec = "1.13.2"
socket2 = "0.6.0"
solana-account = "3.0.0"
solana-account-decoder = "~3.0.4"
solana-client = "~3.0.4"
solana-commitment-config = "3.0.0"
solana-logger = "3.0.0"
solana-nohash-hasher = "0.2.1"
solana-rpc-client-api = "~3.0.4"
solana-sdk = "3.0.0"
solana-storage-proto = "~3.0.4"
solana-transaction-context = "~3.0.4"
solana-transaction-status = "~3.0.4"
solana-version = "~3.0.4"
spl-token-2022-interface = "2.0.0"
thiserror = "2.0.7"
tikv-jemallocator = { version = "0.6.0", features = ["unprefixed_malloc_on_supported_platforms"] }
tokio = "1.42.0"
tokio-rustls = "0.26.1"
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.16"
toml = "0.8.23"
tonic = "0.14.1"
tonic-build = "0.14.1"
tonic-prost = "0.14.1"
tonic-prost-build = "0.14.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
vergen = "9.0.2"
webpki-roots = "1.0.1"
yellowstone-grpc-proto = "10.1.1"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
